added website name

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,7 +12,7 @@
     <link rel="manifest" href="/site.webmanifest">
     <script src="https://kit.fontawesome.com/6d951739d1.js" crossorigin="anonymous"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCFRQw4Po3RgaPeK3qF1NOarJlfD5Cs3RY&libraries=places,geometry"></script>
-    <title>React Template</title>
+    <title>Shobha</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
