--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <!-- <link rel="manifest" href="/site.webmanifest"> -->
     <script src="https://kit.fontawesome.com/6d951739d1.js" crossorigin="anonymous"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCFRQw4Po3RgaPeK3qF1NOarJlfD5Cs3RY&libraries=places,geometry"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCFRQw4Po3RgaPeK3qF1NOarJlfD5Cs3RY&libraries=places,geometry"></script> -->
     <title>Shobha</title>
   </head>
   <body>
