add google analytics

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,15 @@
         <link href="/static/css/main.649fdc17.css" rel="stylesheet">
         <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
     </head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-587WEMZX4B"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-587WEMZX4B');
+    </script>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
